Display ecotax on order recap page - refs #11035

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/checkout/onepage/review/item.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/checkout/onepage/review/item.phtml
@@ -81,6 +81,10 @@ $imgY = $helper->calculateHeight($imgX);
                 </div>
             <?php endif; ?>
         <?php endif; ?>
+
+        <?php if ($_item->getEcotax() > 0): ?>
+            <div class="ecotaxe">dont <?php echo Mage::helper('core')->formatPrice($_item->getEcotax()); ?> d'éco-part.</div>
+        <?php endif; ?>
     </td>
     <?php endif; ?>
     <?php if ($this->helper('tax')->displayCartPriceInclTax() || $this->helper('tax')->displayCartBothPrices()): ?>
@@ -127,6 +131,10 @@ $imgY = $helper->calculateHeight($imgX);
                     <span class="nobr"><?php echo Mage::helper('weee')->__('Total incl. tax'); ?>:<br /> <?php echo $this->helper('checkout')->formatPrice($_incl+$_item->getWeeeTaxAppliedAmount()); ?></span>
                 </div>
             <?php endif; ?>
+        <?php endif; ?>
+
+        <?php if ($_item->getEcotax() > 0): ?>
+            <div class="ecotaxe">dont <?php echo Mage::helper('core')->formatPrice($_item->getEcotax()); ?> d'éco-part.</div>
         <?php endif; ?>
     </td>
     <?php endif; ?>
