--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/sales/order/items/renderer/default.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/sales/order/items/renderer/default.phtml
@@ -177,6 +177,10 @@
                     <?php endif; ?>
             </span>
                 <?php endif; ?>
+
+        <?php if ($_item->getEcotax() > 0): ?>
+            <div class="ecotaxe">dont <?php echo Mage::helper('core')->formatPrice($_item->getEcotax()); ?> d'éco-part.</div>
+        <?php endif; ?>
     </td>
     <td class="a-right">
         <span class="nobr">
