Display ecotax on client invoices - refs #11035

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/sales/order/invoice/items/renderer/default.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/sales/order/invoice/items/renderer/default.phtml
@@ -191,6 +191,10 @@
                     <?php endif; ?>
             </span>
                 <?php endif; ?>
+
+        <?php if ($_item->getEcotax() > 0): ?>
+            <div class="ecotaxe">dont <?php echo Mage::helper('core')->formatPrice($_item->getEcotax()); ?> d'éco-part.</div>
+        <?php endif; ?>
     </td>
     <td class="a-center"><?php echo $_item->getQty() * 1 ?> </td>
     <td class="a-right">
