Display eco tax on transactional emails - refs #11035

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/email/order/items/invoice/default.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/email/order/items/invoice/default.phtml
@@ -120,5 +120,9 @@
                 <?php endif; ?>
             <?php endif; ?>
         <?php endif; ?>
+
+        <?php if ($_item->getEcotax() > 0): ?>
+            <div class="ecotaxe">dont <?php echo Mage::helper('core')->formatPrice($_item->getEcotax() * $_item->getQty()); ?> d'éco-part.</div>
+        <?php endif; ?>
     </td>
 </tr>
