--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/email/order/items/order/default.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/email/order/items/order/default.phtml
@@ -122,6 +122,10 @@
                 <?php endif; ?>
             <?php endif; ?>
         <?php endif; ?>
+
+        <?php if ($_item->getEcotax() > 0): ?>
+            <div class="ecotaxe">dont <?php echo Mage::helper('core')->formatPrice($_item->getEcotax() * $_item->getQtyOrdered()); ?> d'éco-part.</div>
+        <?php endif; ?>
     </td>
 </tr>
 <?php if ($_item->getGiftMessageId() && $_giftMessage = $this->helper('giftmessage/message')->getGiftMessage($_item->getGiftMessageId())): ?>
