Fix category chooser - refs #11092

--- a/.modman/Jumbobag_Catalog/src/app/design/frontend/jumbobag/default/template/catalog/product/list.phtml
+++ b/.modman/Jumbobag_Catalog/src/app/design/frontend/jumbobag/default/template/catalog/product/list.phtml
@@ -46,8 +46,10 @@
 
         var selectFilter = function ($filter) {
             $filters.closest('.gallery-header-center-right-links').removeClass('gallery-header-center-right-links-current');
-            $filter.addClass('gallery-header-center-right-links-current');
+            $filter.parents('.gallery-header-center-right-links').addClass('gallery-header-center-right-links-current');
         };
+
+        $filters.first().click();
     });
 </script>
 
