--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/cms.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/cms.css
@@ -9,3 +9,21 @@
 	width: 100%;
 	height: 540px;
 }
+
+@media only screen and (max-width: 767px) {
+	.cms-catalogue .main.row,
+	.cms-catalogue .main.row .col-main {
+		width: 100%;
+	}
+
+	.cms-catalogue .main.row h2 {
+		margin: 0 10px 10px 10px;
+		text-align: center;
+	}
+	.cms-catalogue-slider {
+		height: 400px;
+	}
+	.cms-catalogue-video-player {
+		height: 300px;
+	}
+}
