add catalog to footer + update script cms page #11103

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
@@ -86,7 +86,7 @@
         <div class="responsive-footer">
           <h4>Information</h4>
           <ul class="to_hide_reaction">
-            <li><a href="/catalogue">Catalogue 2016-2017</a></li>
+            <li><a href="/catalogue">Catalogue <?= date('Y') ?></a></li>
             <li><a href="/manufacturing">Fabrication</a></li>
             <li><a href="/faq">FAQ</a></li>
             <li><a href="/shipping">Livraison</a></li>
