correction des fotes #11088

--- a/.modman/Jumbobag_Catalog/src/app/design/frontend/jumbobag/default/template/catalog/product/list.phtml
+++ b/.modman/Jumbobag_Catalog/src/app/design/frontend/jumbobag/default/template/catalog/product/list.phtml
@@ -99,7 +99,7 @@ $listY = 230;
                                 <div
                                     class="gallery-header-center-right-links gallery-header-center-right-links-current topsubmenu group-1"
                                     id="filter-all">
-                                    <a data-categoryid="<?= $_category->getId() ?>">Tout les produits</a>
+                                    <a data-categoryid="<?= $_category->getId() ?>">Tous les produits</a>
                                 </div>
                                 <?php foreach ($_subcategories as $_subcategory): ?>
                                     <div
