--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
@@ -6,14 +6,14 @@
           <img src="/skin/frontend/jumbobag/default/images/box.svg" alt="Livraison gratuite à partir de 100€" />
         </div>
         <h3>Livraison gratuite</h3>
-        <p>à partir de 100€ dachats</p>
+        <p>à partir de 100€ d'achats</p>
       </div>
       <div class="argument-footer col-sm-3 col-xs-6">
         <div class="image-wrapper wow fadeIn" data-wow-delay="0.1s">
           <img src="/skin/frontend/jumbobag/default/images/location.svg" alt="Venez en magasin" />
         </div>
         <h3>Venez en magasin</h3>
-        <p>Trouvez un revendeur prêt de chez vous</p>
+        <p>Trouvez un revendeur près de chez vous</p>
         <a href="/stores/store-finder.html"><span>revendeurs</span></a>
       </div>
       <div class="argument-footer col-sm-3 col-xs-6">
@@ -21,7 +21,7 @@
           <img src="/skin/frontend/jumbobag/default/images/euro.svg" alt="Financement" />
         </div>
         <h3>Financement</h3>
-        <p>Option de paiement disponible</p>
+        <p>Options de paiement disponibles</p>
         <a href="/payment-mode"><span>en savoir plus</span></a>
       </div>
       <div class="argument-footer col-sm-3 col-xs-6">
