footer title linkable + change /faq to /info #11114

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/navigation/top.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/queldorei/navigation/top.phtml
@@ -40,7 +40,7 @@
         }
         ?>
         <li class="level0 level-top">
-            <a href="/faq"><span><?php echo $this->__('INFORMATIONS'); ?></span></a>
+            <a href="/info"><span><?php echo $this->__('INFORMATIONS'); ?></span></a>
             <div class="sub-wrapper" style="width:485px">
                 <ul class="level0">
                     <li class="">
@@ -55,7 +55,7 @@
                     <li class="">
                         <ol>
                             <li class="level1 nav-1-1 first">
-                                <a href="/faq">
+                                <a href="/info">
                                     <span>FAQ <img class="category_image" width="150" src="<?php echo Mage::getDesign()->getSkinUrl("images/navigation/faq.jpg"); ?>" alt="FAQ"></span>
                                 </a>
                             </li>
