--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
@@ -66,14 +66,18 @@
       <div class="presses col-sm-3">
         <div class="responsive-footer">
           <div class="presse-medical footer_to_hide">
-            <h4 class="presse-title">Presse</h4>
+            <h4 class="presse-title">
+                <a href="mailto:presse@jumbobag.fr">Presse</a>
+            </h4>
             <ul class="to_hide_reaction">
               <li><a href="/on-parle-de-nous">On parle de nous</a></li>
               <li><a href="/contact-presse">Contact de presse</a></li>
             </ul>
           </div>
           <div class="presse-medical footer_to_hide">
-            <h4 class="medical-title">Medical</h4>
+            <h4 class="medical-title">
+                <a href="/safebag">Medical</a>
+            </h4>
             <ul class="to_hide_reaction">
               <li><a href="/safebag">Safebag</a></li>
             </ul>
@@ -84,11 +88,13 @@
 
       <div class="informations col-sm-3 footer_to_hide">
         <div class="responsive-footer">
-          <h4>Information</h4>
+          <h4>
+              <a href="/info">Information</a>
+          </h4>
           <ul class="to_hide_reaction">
             <li><a href="/catalogue">Catalogue <?= date('Y') ?></a></li>
             <li><a href="/manufacturing">Fabrication</a></li>
-            <li><a href="/faq">FAQ</a></li>
+            <li><a href="/info">FAQ</a></li>
             <li><a href="/shipping">Livraison</a></li>
             <li><a href="/payment-mode">Modes de règlement</a></li>
             <li><a href="/legal-notice">Mentions légales</a></li>
@@ -102,7 +108,9 @@
 
       <div class="contact col-sm-3 footer_to_hide">
         <div class="responsive-footer">
-          <h4>Contact</h4>
+          <h4>
+              <a href="mailto:contact@jumbobag.fr">Contact</a>
+          </h4>
           <div class="to_hide_reaction">
             <p>Jumbo Bag</p>
             <p>12 rue Ferrando</p>
