--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
@@ -63,65 +63,12 @@
           </div>
         </div>
       </div>
-      <div class="presses col-sm-3">
-        <div class="responsive-footer">
-          <div class="presse-medical footer_to_hide">
-            <h4 class="presse-title">
-                <a href="mailto:presse@jumbobag.fr">Presse</a>
-            </h4>
-            <ul class="to_hide_reaction">
-              <li><a href="/on-parle-de-nous">On parle de nous</a></li>
-              <li><a href="/contact-presse">Contact de presse</a></li>
-            </ul>
-          </div>
-          <div class="presse-medical footer_to_hide">
-            <h4 class="medical-title">
-                <a href="/safebag">Medical</a>
-            </h4>
-            <ul class="to_hide_reaction">
-              <li><a href="/safebag">Safebag</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
 
+      <?php echo $this->getChildHtml('shopper_footer_press') ?>
 
-      <div class="informations col-sm-3 footer_to_hide">
-        <div class="responsive-footer">
-          <h4>
-              <a href="/info">Information</a>
-          </h4>
-          <ul class="to_hide_reaction">
-            <li><a href="/catalogue">Catalogue <?= date('Y') ?></a></li>
-            <li><a href="/manufacturing">Fabrication</a></li>
-            <li><a href="/info">FAQ</a></li>
-            <li><a href="/shipping">Livraison</a></li>
-            <li><a href="/payment-mode">Modes de règlement</a></li>
-            <li><a href="/legal-notice">Mentions légales</a></li>
-            <li><a href="/cgv">CGV</a></li>
-            <li><a href="/dataprotect">Protection des données</a></li>
-            <li><a href="/retractinfo">Droit de rétractation</a></li>
-            <li><a href="/concours">Règlement Jeu Concours</a></li>
-          </ul>
-        </div>
-      </div>
+      <?php echo $this->getChildHtml('shopper_footer_information') ?>
 
-      <div class="contact col-sm-3 footer_to_hide">
-        <div class="responsive-footer">
-          <h4>
-              <a href="mailto:contact@jumbobag.fr">Contact</a>
-          </h4>
-          <div class="to_hide_reaction">
-            <p>Jumbo Bag</p>
-            <p>12 rue Ferrando</p>
-            <p>31400 Toulouse France</p>
-            <br />
-            <p>+33(0)9 72 60 09 18</p>
-            <br />
-            <p><a href="mailto:contact@jumbobag.fr">contact@jumbobag.fr</a></p>
-          </div>
-        </div>
-      </div>      
+      <?php echo $this->getChildHtml('shopper_footer_contact') ?>
     </div>
     <div class="footer-bank-mobile col-sm-4" style="display: none;">
             <ul>
