remove div in rev-slider on mobile #11088

--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/modern/css/styles.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/modern/css/styles.css
@@ -7301,3 +7301,7 @@ body.fixbandesbleues .presentation-produit-wrapper,
 body.fixbandesbleues .entretien-wrapper {
 	background: transparent !important;
 }
+
+.rev_slider .tp-mask-wrap {
+	display: none !important;
+}
