change date addtocart #11125

--- a/.modman/Jumbobag_Catalog/src/app/design/frontend/jumbobag/default/template/catalog/product/view/addtocart.phtml
+++ b/.modman/Jumbobag_Catalog/src/app/design/frontend/jumbobag/default/template/catalog/product/view/addtocart.phtml
@@ -29,8 +29,8 @@
 <?php $buttonTitle = $this->__('Add to Cart'); ?>
 <?php if ($theme_sublayout == "product-sublayout-float"): ?>
     <div class="add-to-cart">
-        <button type="button" title="Disponible à partir de mai 2018" class="button btn-cart">
-            Disponible à partir de mai 2018
+        <button type="button" title="Disponible à partir de juin 2018" class="button btn-cart">
+            Disponible à partir de juin 2018
         </button>
         <?php echo $this->getChildHtml('', true, true) ?>
     </div>
