Update Innersense viewer to selectTheme method - refs #11223

--- a/.modman/Innersense_3DViewer/src/app/design/frontend/base/default/template/innersense/simulator.phtml
+++ b/.modman/Innersense_3DViewer/src/app/design/frontend/base/default/template/innersense/simulator.phtml
@@ -103,7 +103,7 @@
                     return options
                 }, [])
                 .forEach(function (option) {
-                    viewer3D.selectOption(option.id, option.value)
+                    viewer3D.selectOption(option.id, option.value, "selectTheme")
                 });
 
             viewer3D.changePrice(window.viewer3DOptions.getPrice())
